# polymesh-private-proof-api

./: Cargo.toml  README.md  rust-toolchain.toml  test.txt
.circleci/: config.yml
.docker/: Dockerfile.proofapi.debian
.docker/arm64/: Dockerfile.proofapi.debian
.docker/scripts/: version.sh
api/: .env.example  .gitignore  Cargo.toml  fill_db.sh
api/migrations/: 20230718114517_users_table.sql  20230718165325_accounts_table.sql  20230718165334_assets_table.sql  20230718165406_account_balances_table.sql
api/shared/: Cargo.toml
api/shared/src/: lib.rs
api/src/: health.rs  lib.rs  repo.rs  v1.rs
api/src/repo/: sqlite.rs
api/src/v1/: account_assets.rs  account_balances.rs  accounts.rs  assets.rs  users.rs
proof-api/: .env.example  .gitignore  Cargo.toml  fill_db.sh
proof-api/migrations/: 20230718165334_assets_table.sql  20240112140458_remove_ticker.sql
proof-api/shared/: Cargo.toml
proof-api/shared/src/: lib.rs
proof-api/src/: repo.rs  v1.rs
proof-api/src/repo/: sqlite.rs
proof-api/src/v1/: account_assets.rs  accounts.rs  assets.rs  users.rs
rest-api/: .env.example  Cargo.toml  fill_db.sh
rest-api/migrations/: 20230718165325_accounts_table.sql  20230718165406_account_assets_table.sql  20231013131903_signers_table.sql  20231122124625_transactions_table.sql  20231122143937_settlements_table.sql  20231122145624_settlement_events_table.sql  20240112140458_remove_ticker.sql  20240115111126_fix_asset_id.sql
rest-api/src/: health.rs  lib.rs  repo.rs  signing.rs  v1.rs  watcher.rs
rest-api/src/repo/: sqlite.rs
rest-api/src/signing/: db.rs  vault.rs
rest-api/src/v1/: account_assets.rs  accounts.rs  assets.rs  signers.rs  tx.rs  users.rs
rest-api/src/v1/tx/: account_assets.rs  accounts.rs  assets.rs
scripts/: add_mediator.sh  asset_mint.sh  create-test-accounts.sh  create-test-admins.sh  create_account.sh  create_asset.sh  create_settlement.sh  create_signer.sh  create_venue.sh  env.example  execute_settlement.sh  get_account_did.sh  get_accounts.sh  get_asset_details.sh  get_identity.sh  get_signer.sh  get_signer_did.sh  get_signer_venues.sh  get_signers.sh  init_account.sh  mediator_affirm_leg.sh  receiver_affirm_leg.sh  receiver_apply_incoming.sh  sender_affirm_leg.sh  setup_chain.sh
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  proofs.rs  tx.rs
