[workspace]
members = [
    "api",
    "api/shared",
]
resolver = "2"

[patch.crates-io]
confidential_assets = { git = "ssh://git@github.com/PolymeshAssociation/confidential_assets.git", branch = "main" }
bulletproofs = { version = "4.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }

[workspace.dependencies]
# internal
confidential_assets-api-shared = { path = "./api/shared/" }
confidential_assets-api = { path = "./api/" }

# Confidential Assets
confidential_assets = { version = "1.0.0", default-features = false }

rand = { version = "0.8", default-features = false, features = ["alloc"] }
zeroize = "1.6.0"

# encoding
hex = { version = "0.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-hex = { version = "0.1.0" }

# actix
actix-cors = "0.6"
actix-web = "4.3"
actix-web-lab = "0.19"

# types
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.29", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.29"

# sql
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid"] }

