[workspace]
members = [
    "proof-api",
    "rest-api",
    "shared",
]
resolver = "2"

[patch.crates-io]
#confidential_assets = { git = "ssh://git@github.com/PolymeshAssociation/confidential_assets.git", branch = "MESH-2112-improve_proofs" }
confidential_assets = { path = "../confidential_assets/" }
bulletproofs = { version = "4.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }
#polymesh-api = { path = "../polymesh-api/" }
#polymesh-api-client = { path = "../polymesh-api/crates/polymesh-api-client/" }

[workspace.dependencies]
# internal
confidential-proof-shared = { path = "./shared/" }
confidential-proof-api = { path = "./proof-api/" }
confidential-reset-api = { path = "./reset-api/" }

# Confidential Assets
confidential_assets = { version = "1.0.0", default-features = false }

# Polymesh API
polymesh-api = { version = "3.2.0", default-features = false }
polymesh-api-client = { version = "3.3.0", default-features = false, features = ["utoipa"] }
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = { version = "24.0", default-features = false }

# OpenAPI
utoipa = { version = "4.0", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }
utoipa-redoc = { version = "1.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "1.0", features = ["actix-web"] }

thiserror = "1.0"
rand = { version = "0.8", default-features = false, features = ["alloc"] }
zeroize = { version = "1.6.0", features = ["derive"] }

# encoding
hex = { version = "0.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-hex = { version = "0.1.0" }
serde_with = { version = "3.4.0", default-features = false, features = ["alloc", "macros"] }
base64 = { version = "0.21" }

# actix
actix-cors = "0.6"
actix-web = "4.3"
actix-web-lab = "0.19"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.4" }
http = { version = "0.2" }

# types
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.29", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.29"

# sql
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid"] }

