[package]
name = "mercat-api"
version = "0.1.0"
authors = [ "Polymesh Association" ]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.71"

# internal
mercat-api-shared = { path = "./shared/", features = ["backend"] }

# Mercat and crypto.
mercat = { workspace = true, default-features = false, features = ["balance_64"] }
confidential_identity_core = { workspace = true, default_features = false }
rand = { workspace = true, default-features = false, features = ["alloc"] }

# encoding
hex = { workspace = true, default-features = false, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
serde_bytes = { workspace = true, default-features = false, features = ["alloc"] }

# actix
actix-cors = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
async-trait = "0.1"

# types
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = { workspace = true }

# sql
sqlx = { workspace = true, features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid"] }

[features]
default = ["std", "simd_backend", "discrete_log"]

u64_backend = [
	"mercat/u64_backend",
	"confidential_identity_core/u64_backend",
]
avx2_backend = [
	"mercat/avx2_backend",
	"confidential_identity_core/avx2_backend",
]
simd_backend = [
	"mercat/simd_backend",
	"confidential_identity_core/simd_backend",
]

discrete_log = [
	"confidential_identity_core/rayon",
	"confidential_identity_core/discrete_log",
]

std = [
	"mercat/std",
	"confidential_identity_core/std",
	"rand/std",
	"codec/std",
]
